# vision-model-lab

./: .dockerignore  .editorconfig  .env  .env.example  .gitignore  .ignore  CHANGELOG.md  Dockerfile  MODEL_RND_TRAINING_PLAN.md  README.md  docker-compose.yml  pyproject.toml  start.bat  start.ps1  start.py
.github/workflows/: ci.yml
configs/datasets/: example_dataset.yml
configs/experiments/: classification_baseline.yml  detection_ultralytics_external.yml  detection_yolo_baseline.yml  reference_identity.yml  reid_baseline.yml  segmentation_baseline.yml
configs/export/: model-card.template.yml  models.fragment.template.yml  onnx_export.yml  regression.template.yml  release-decision.template.yml
data/: README.md
data/manifests/: example_train_v1.jsonl
docs/: ARCHITECTURE.md  DELIVERY_STANDARD.md  OPERATIONS.md  PRODUCTION_READINESS.md  RELEASE_0.3.0.md  RELEASE_0.4.0.md  RELEASE_0.4.1.md
experiments/: index.yml
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  api.ts  (+3 more)
migrations/: env.py
scripts/: acceptance_check.py  evaluate.py  export_onnx.py  hash_artifact.py  package_model.py  prepare_dataset.py  run_pipeline.py  runtime_check.py  serve_api.py  start_lab.py  train.py  validate_contract.py  validate_model_package.py
tests/: conftest.py  test_api.py  test_auth.py  test_contracts.py  test_env_files.py  test_manifest.py  test_model_package.py  test_naming.py  test_object_store.py  test_pipeline_integrity.py  test_reference_pipeline.py  test_storage.py  test_task_adapters.py
(+43 files in other folders)
