[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-model-lab"
version = "0.5.0"
description = "Model research, evaluation, ONNX export, and delivery tooling for vision systems."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2",
  "PyYAML>=6",
  "onnx>=1.15",
  "onnxruntime>=1.17",
  "python-multipart>=0.0.9",
  "uvicorn>=0.27"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8",
  "pytest-asyncio>=0.25"
]
s3 = [
  "boto3>=1.34"
]
postgres = [
  "psycopg[binary]>=3.2",
  "psycopg-pool>=3.2"
]
migrations = [
  "alembic>=1.13",
  "SQLAlchemy>=2.0"
]

[project.scripts]
vmlab = "vision_model_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"
asyncio_default_fixture_loop_scope = "function"
